--- a/Capstone_Project_2.ipynb
+++ b/Capstone_Project_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Capstone Project - 2",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOdDhlfn+ffVlwNJPco3IL0",
+      "authorship_tag": "ABX9TyNn3BS/qnmU1SImfzZ3HLSy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1864,7 +1864,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Train Test Split"
+        "# **Train Test Split**"
       ],
       "metadata": {
         "id": "ECUteX1gxmHV"
@@ -1977,7 +1977,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Linear Regression"
+        "# **Linear Regression**"
       ],
       "metadata": {
         "id": "ywfFgRuI3kMo"
