--- a/Capstone_Project_2.ipynb
+++ b/Capstone_Project_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Capstone Project - 2",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNn3BS/qnmU1SImfzZ3HLSy",
+      "authorship_tag": "ABX9TyMkaQXO9KP3C75HGIjaknAu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -175,6 +175,24 @@
           "execution_count": 5
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dataset we have 185 rows and 5 column. Here our dependent variable is Close and Independent variable is Open, High and Low\n",
+        "Date :- It denotes the month and year of the for a particular price.\n",
+        "\n",
+        "Open :- Open means the price at which a stock started trading that month.\n",
+        "\n",
+        "High :- refers to the maximum price that month.\n",
+        "\n",
+        "Low :- refers to the minimum price that month.\n",
+        "\n",
+        "Close :- refers to the final trading price for that month, which we have to predict using regression"
+      ],
+      "metadata": {
+        "id": "Kc_qh0YZI0uR"
+      }
     },
     {
       "cell_type": "code",
@@ -598,7 +616,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Data Cleaning"
+        "There are multiple variable in the dataset - Date, Open, High and close The columns Open and Close represent the starting and final price.\n",
+        "\n",
+        "\n",
+        "* The High, Low variable are represent the maximum and minimum."
+      ],
+      "metadata": {
+        "id": "EF67Dty6IToZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Data Cleaning**"
       ],
       "metadata": {
         "id": "AywN5DJJWYvV"
@@ -607,7 +637,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "#Checking For The Null Values\n",
         "Data.isnull().sum()"
       ],
@@ -638,6 +667,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "No missing values in dataset. Here our dataset in no nan values"
+      ],
+      "metadata": {
+        "id": "4DAwRwohI97h"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Checking For The Duplicate values\n",
@@ -663,6 +701,27 @@
           "execution_count": 11
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " Do not have any duplicates in dataset"
+      ],
+      "metadata": {
+        "id": "4oa4BlyUJDXR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Data Type Change :-\n",
+        "\n",
+        "The Given Date in data is of format MMM-YY is converted to proper date of YYYY-MM-DD.\n",
+        "Since, Date column has dtype as object we've to convert it into datetime format"
+      ],
+      "metadata": {
+        "id": "JJn5ePhWJHYJ"
+      }
     },
     {
       "cell_type": "code",
@@ -711,6 +770,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "-- Format and data type of date feature changed into datetime."
+      ],
+      "metadata": {
+        "id": "LgfvPHkkJWQQ"
+      }
     },
     {
       "cell_type": "code",
@@ -897,7 +965,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Outliers**"
+        "# **Checking For The Outliers**"
       ],
       "metadata": {
         "id": "fZBfLVE6W-p4"
@@ -1067,6 +1135,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "-- Data preprocessing finished. Dataset is clean and ready for exploratory data analysis"
+      ],
+      "metadata": {
+        "id": "oVEsg6YAJvWg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **Exploratory Data Analysis**"
       ],
       "metadata": {
@@ -1110,6 +1187,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "It is Right Skewed Distirbution\n",
+        "\n",
+        "--To make it normal distribution apply log transformation"
+      ],
+      "metadata": {
+        "id": "ZQb1YnvVJ1sR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Distribution Plot Of Closing Price For Applying Log Transformation\n",
@@ -1143,6 +1231,33 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "-- After log transformation, distribution of closing price is more normal"
+      ],
+      "metadata": {
+        "id": "aflDkw9mJ8Sk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Independent Variable Open , High and Low price of stock**"
+      ],
+      "metadata": {
+        "id": "M0ToVRgnJ_42"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Plotting distribution for numerical Features"
+      ],
+      "metadata": {
+        "id": "hhyJsfyGKHmF"
+      }
     },
     {
       "cell_type": "code",
@@ -1182,8 +1297,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "It looks for numerical features are rightly skewed."
+      ],
+      "metadata": {
+        "id": "hoLtroSjKNfH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Apply log transformation to make normal."
+      ],
+      "metadata": {
+        "id": "aHo5QfptKR9w"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Log transformation for 'open' feature\n",
         "plt.figure(figsize=(6,6))\n",
         "sns.distplot(np.log10(Data['Open']),color='Red')\n",
         "plt.title('Distribution',fontsize=18)\n",
@@ -1216,9 +1350,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "It looks like Normally Distributed of open Feature"
+      ],
+      "metadata": {
+        "id": "sVDsHM8DKY_s"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "\n",
+        "# Ploting for Distribution of 'high' Feature\n",
         "plt.figure(figsize=(6,6))\n",
         "sns.distplot(Data['High'],color='Red')\n",
         "plt.title('Distribution',fontsize=18)\n",
@@ -1251,8 +1394,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "It looks for numerical features are rightly skewed."
+      ],
+      "metadata": {
+        "id": "v63mGr3ZKdeh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Log Transformation of 'High' Feature\n",
         "plt.figure(figsize=(6,6))\n",
         "sns.distplot(np.log10(Data['High']),color='Red')\n",
         "plt.title('Distribution',fontsize=18)\n",
@@ -1285,8 +1438,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Apply log transformation to make normal."
+      ],
+      "metadata": {
+        "id": "RkgFY6EqKisr"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# for Normal Distribution\n",
+        "# ploting for Distribution of 'Low' Feature\n",
         "plt.figure(figsize=(6,6))\n",
         "sns.distplot(Data['Low'],color='Red')\n",
         "plt.title('Distribution',fontsize=18)\n",
@@ -1321,6 +1485,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Log Transformation of 'low' feature \n",
         "plt.figure(figsize=(6,6))\n",
         "sns.distplot(np.log10(Data['Low']),color='Red')\n",
         "plt.title('Distribution',fontsize=18)\n",
@@ -1353,9 +1518,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "It looks like Normally Distributed of Low Feature"
+      ],
+      "metadata": {
+        "id": "niLRIiavLjUe"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "\n",
         "#Now find out the correlation between the Dependent variables and Independent Variables\n",
         "#Scatter pot with best fit line\n",
         "plt.scatter(Data['Close'],Data['Open'],alpha=0.5) \n",
@@ -1467,6 +1640,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Now, we will see the correlation between all the features in our data set"
+      ],
+      "metadata": {
+        "id": "GQps8n8mLo6R"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Let's find out Correlation with heatmap\n",
@@ -1508,6 +1690,15 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here, all variables shows the highest correlation among them"
+      ],
+      "metadata": {
+        "id": "H1vlLYNHLv5k"
+      }
     },
     {
       "cell_type": "code",
@@ -1681,6 +1872,17 @@
           "execution_count": 30
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Even though we have high VIF scores, we will not perform feature engineering because for this particular use case, each feature is important. In the real world, most indicators take into account each of these features to predict future values\n",
+        "\n",
+        "We have the very High VIF of Open, High, Low fetures in our dataset so we have to drop them which is least correlated with dependent variable"
+      ],
+      "metadata": {
+        "id": "GUiIf44fL2u8"
+      }
     },
     {
       "cell_type": "code",
@@ -1864,10 +2066,34 @@
     {
       "cell_type": "markdown",
       "source": [
+        "We have dropped 3 features from our dataset because it can effect our model efficiency but neglecting high VIF is far more dangerous than dropping features.\n",
+        "\n",
+        "So, we preferred to drop the features and move forward with the Low Variable."
+      ],
+      "metadata": {
+        "id": "5qQOuDTaMARi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **Train Test Split**"
       ],
       "metadata": {
         "id": "ECUteX1gxmHV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Splitting Data\n",
+        "\n",
+        "X = Independent Variable\n",
+        "\n",
+        "y = Dependent Variable"
+      ],
+      "metadata": {
+        "id": "Xtiok_wiMIi6"
       }
     },
     {
@@ -1973,6 +2199,23 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We build 4 regression models for our data.\n",
+        "\n",
+        "Linear Regression\n",
+        "\n",
+        "Lasso Rigression\n",
+        "\n",
+        "Ridge Rigression\n",
+        "\n",
+        "Elastic Net Regression"
+      ],
+      "metadata": {
+        "id": "qUVQ_Gq2MaVk"
+      }
     },
     {
       "cell_type": "markdown",
